# arm-microprocessor-simulator

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DRAFT-diagram.drawio  DRAFT.md  INSTRUCTIONS.txt  README.md  TODO.md  package.json  tailwind.config.js  test.bat
.github/classroom/: autograding.json
docs/: ARCHITECTURE.md  DRAFT-diagram.drawio  DRAFT.md  INSTRUCTION_DECODING.txt  REPORT.md  TODO.md
lib/: Cargo.toml
lib/src/: cpu.rs  cpu_enum.rs  disassemble.rs  elf.rs  execute.rs  instruction.rs  lib.rs  memory.rs  options.rs  state.rs  trace.rs  util.rs
src/: App.module.css  App.tsx  DisassemblyPanel.tsx  FlagsPanel.tsx  MemoryGrid.module.css  MemoryGrid.tsx  MemoryPanel.module.css  MemoryPanel.tsx  RegisterPanel.tsx  StackPanel.tsx  TerminalPanel.tsx  Toolbar.module.css  Toolbar.tsx  index.css  state.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cpu_cmd.rs  disassembly_cmd.rs  elf.rs  flags.rs  flags_cmd.rs  interface.rs  interface_cmd.rs  loader.rs  loader_cmd.rs  main.rs  memory.rs  memory_cmd.rs  memory_state.rs  options.rs  options_state.rs  ram.rs  registers.rs  registers_cmd.rs  stack_cmd.rs  terminal_cmd.rs
src/css/: App.module.css  MemoryPanel.module.css  Toolbar.module.css  index.css
src/types/: IPC_Payloads.d.ts  Props.d.ts
tests/: pmcgi795_halfword_no_io.c  pmcgi795_halfword_no_io.lst  sergix_halfword_no_io.c  sergix_halfword_no_io.lst
