[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
object = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
normpath = "0.3.2"
bitmatch = "0.1.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"