[package]
name = "cps310-simulator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
log = "0.4.17"
fern = "0.6"
object = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
state = "0.5"
# https://github.com/tauri-apps/tauri/discussions/3059
tauri = { version = "1.0.0", features = ["api-all", "cli", "devtools"] }
tokio = { version = "1", features = ["full"] }
ts-rs = "6.1"

# [dependencies.local_armsim]
# path = "../src"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
features = ["colored"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
