[package]
name = "cps310-simulator"
version = "0.1.0"
description = "ARMSim"
authors = ["you"]
license = ""
repository = "https://github.com/bjucps310/cps310-simulator-Sergix"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
lib = { path = "../lib" }
log = "0.4.17"
fern = "0.6"
normpath = "0.3.2"
object = "0.29.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
state = "0.5"
# https://github.com/tauri-apps/tauri/discussions/3059
tauri = { version = "1.2.1", features = ["api-all", "cli", "devtools"] }
tokio = { version = "1", features = ["full"] }
ts-rs = "6.1"

[dependencies.tauri-plugin-log]
git = "https://github.com/tauri-apps/tauri-plugin-log"
features = ["colored"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
